# NV-Disruptron

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  checkpoints.db-shm  checkpoints.db-wal  configs  lifeline  lifeline-ops-mcp  london-impact-mcp  london-spatial-mcp  mcp  nemoclaw  outputs-api  requirements-nvidia-suite.txt  shared  tfl-mcp-server
.cursor/rules/: engineering-loop.mdc
.github/workflows/: ci-checks.yml  deploy-gh-pages.yml  sync-to-hf-space.yml
data/: README.md  borough_gva_per_job.csv  disruptron_context.db  live_feed_observations.db  london_wards_imd.csv  video_events.db
data/geo/: hazards.geojson  video_events.geojson
docs/: ARCHITECTURE.md  CONTEXT.md  DEVELOPMENT.md  ENGINEERING.md  INDEX.md  MCP.md  NEMOCLAW.md  QUICKSTART.md  SPARK_SETUP.md  STRUCTURE.md  TELEGRAM.md  cursor_locateanything_hermes_audit.md  cursor_nvidia_ai_hack_project_overview.md
docs/blog/: nvidia-suite-template-blog.md
docs/screenshots/: .gitkeep
features/: README.md
features/agent/: README.md
features/agent-autonomous/docs/: CHANNELS.md  DOCUMENTATION.md
features/agent-autonomous/scripts/: configure_nemoclaw_lifeline.sh  start_lifeline_stack.sh  start_nemoclaw_lifeline.sh  test_analysis_pipeline.sh  test_lifeline_skills.sh  test_nemoclaw_lifeline.sh
features/agent-autonomous/workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
features/agent-interactive/configs/: config_lifeline_shallow_vllm.yml  config_urban_ops.yml
features/agent-interactive/scripts/: start_lifeline.sh  test_aiq_lifeline.sh
features/agent/docs/: CHANNELS.md  DOCUMENTATION.md
features/agent/guardrails/: config.yml  topics.co  wrapper.py
features/agent/research/: README.md
features/agent/workspace/: AGENTS.md  HEARTBEAT.md  MEMORY.md  ROUTING.md  SOUL.md  TOOLS.md  USER.md  VOICE.md
features/delivery/disruptron-api/: pyproject.toml  start.sh
features/delivery/disruptron-api/data/: alert_monitor_state.json  disruptron_context.db  scheduler_state.json  web_session.db  web_subscriptions.json
features/delivery/disruptron-api/disruptron_api/: __init__.py  alert_monitor.py  briefing_client.py  config.py  context.py  events.py  gateway.py  integrations.py  main.py  personalization.py  scheduler.py  stt_factory.py  tts.py  web_session_store.py  web_subscriptions.py
features/delivery/disruptron-api/disruptron_api/backend/: agent.py  camera_watch.py  chat.py  router.py  transcribe.py  watcher.py
features/delivery/disruptron-api/disruptron_api/delivery/: telegram.py
features/delivery/disruptron-api/tests/: test_gateway.py  test_router.py
features/delivery/telegram-bot/: .gitignore  pyproject.toml
features/delivery/telegram-bot/disruptron_bot/: __init__.py  config.py  main.py
features/delivery/telegram-bot/disruptron_bot/backend/: __init__.py  client.py
features/delivery/telegram-bot/disruptron_bot/bot/: __init__.py  app.py  handlers.py  messages.py
features/delivery/web/: .env.example  .gitignore  index.html  package-lock.json  package.json  start.sh  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.js  vite.config.ts
features/impact-intelligence/mcp/: README.md  server.py
features/inference/: README.md
features/inference/scripts/: start_nemotron_backend.sh  (+2 more)
features/observability/: README.md
features/vision/: __init__.py  audio_pipeline.py  dali_pipeline.py  hazard_pipeline.py  live_feed_pipeline.py  locate_anything_client.py  temporal_tracker.py  video_pipeline.py  video_query.py
hf-space/: Dockerfile  README.md  app.py  hf_space_metadata.yml  runtime-requirements.txt  start_space.py
hf-space/disruptron/: __init__.py  agent.py  api.py  proxy.py  requirements.txt  vision.py
logs/: lifeline_status.json
platform/: README.md  repo_root.py
platform/delivery/: README.md
platform/delivery/outputs-api/: .gitignore  pyproject.toml  start.sh  test_outputs.py
platform/delivery/outputs-api/disruptron_bot/: __init__.py  backend.py  bot.py  config.py  context_api.py  context_persist.py  gateway.py  handlers.py  main.py  messages.py  subscriptions.py
platform/mcp/: README.md
platform/mcp/impact/: README.md  pyproject.toml  server.py
platform/mcp/ops/: pyproject.toml  server.py
platform/mcp/spatial/: README.md  pyproject.toml  server.py
platform/scripts-lib/: aiq_env.sh  common.sh  env.sh
platform/shared/: README.md  context_store.py  disruptron_agent_policy.py  disruptron_data.py  google_calendar_client.py  lifeline_data.py  test_context_store.py  tfl_client.py
scripts/: README.md  disruptron  prepare_data.py  run_lifeline_cli.sh  run_lifeline_query.sh  smoke_test_ws1.py  smoke_test_ws1_v2.py  smoke_test_ws2_ws3.py  start_lifeline.sh  start_nemotron_backend.sh  start_vllm_backend.sh  test_aiq_lifeline.sh  test_nemotron_backend.sh
tfl-mcp-server/: .env.example  README.md  pyproject.toml  server.py
(+189 files in other folders)
