[project]
name = "disruptron-outputs-api"
version = "0.2.0"
description = "NV Disruptron push API gateway (frontend-agnostic)"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
disruptron-api = "disruptron_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["disruptron_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
