[project]
name = "disruptron-telegram"
version = "0.2.0"
description = "NV Disruptron Telegram bot frontend"
requires-python = ">=3.11"
dependencies = [
    "disruptron-outputs-api",
    "python-telegram-bot>=21.10",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
disruptron-telegram = "disruptron_bot.main:run"

[tool.uv.sources]
disruptron-outputs-api = { path = "../disruptron-api", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["disruptron_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
