[project]
name = "london-impact-mcp"
version = "0.1.0"
description = "MCP server for London transport disruption equity and economic impact scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
london-impact-mcp = "server:main"
