[project]
name = "disruptron-ops-mcp"
version = "0.1.0"
description = "Slim MCP surface for NV-Disruptron autonomous ops (OpenClaw)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
disruptron-ops-mcp = "server:main"
